BusOne/src/objects/BOT_Formularies_Unique__c.object
<CustomObject>
    <description>To sore the unique formulary values</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Account Unique.</description>
        <label>Account Name</label>
        <referenceTo>Account_Unique__c</referenceTo>
        <relationshipLabel>Plan Formulary</relationshipLabel>
        <relationshipName>Account_Formulary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID</description>
        <label>BOT Entity ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives_Med__c</fullName>
        <description>To store the formulary lives med data</description>
        <label>Formulary Lives Med</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives__c</fullName>
        <label>Total Formulary Lives</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Name__c</fullName>
        <description>To store formulary name</description>
        <label>Formulary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Formularies Unique</label>
    <nameField>
        <label>Formulary Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formularies Unique</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>